--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:allowBackup="true" 
         android:label="@string/app_name"
         android:icon="@mipmap/ic_launcher"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+	    android:debuggable="true">
 
 	    <activity
 		    android:name=".ui.splashScreen.SplashActivity"
@@ -22,6 +23,36 @@
 			    <category android:name="android.intent.category.LAUNCHER"/>
 		    </intent-filter>
 	        </activity>
+
+	    <activity
+		    android:name=".ui.homeScreen.HomeActivity"
+		    android:screenOrientation="portrait">
+
+		</activity>
+
+	    <activity
+		    android:name=".ui.tournamentConfigScreen.TournamentConfigActivity"
+		    android:screenOrientation="portrait">
+
+	    </activity>
+
+	    <activity
+		    android:name=".ui.playerRegistrationScreen.PlayerRegistrationActivity"
+		    android:screenOrientation="portrait">
+
+	    </activity>
+
+	    <activity
+		    android:name=".ui.swissRoundScreen.SwissRoundActivity"
+		    android:screenOrientation="portrait">
+
+	    </activity>
+
+	    <activity
+		    android:name=".ui.winnerScreen.WinnerActivity"
+		    android:screenOrientation="portrait">
+
+	    </activity>
     </application>
 
 </manifest>
